@@ -1,3 +1,8 @@
+2004-05-15  Bruno Haible   <bruno@clisp.org>
+
+	* init.lisp (*documentation*): Change the hash table test to
+	STABLEHASH-EQUAL, since some of the keys are lists, not symbols.
+
 2004-05-15  Bruno Haible  <bruno@clisp.org>
 
 	Use STABLEHASH-EQ as test for hash tables indexed by symbols.
